Refactored staff and legacy data

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -119,9 +119,9 @@
                   <h3>Email Us</h3>
                   <p>For general questions and information:</p>
                   <a
-                    href="mailto:atih_at_uva@virginia.edu"
+                    href="mailto:sai_uva@virginia.edu"
                     class="highlight-email"
-                    >atih_at_uva@virginia.edu</a
+                    >sai_uva@virginia.edu</a
                   >
                 </div>
               </div>
