--- a/pages/join.html
+++ b/pages/join.html
@@ -63,8 +63,8 @@
                     Join our Discord server to chat with members, participate in
                     discussions, and stay updated on events and announcements.
                   </p>
-                  <a href="#" class="btn btn-primary"
-                    >Join Our Discord (NOT AVAILABLE YET)</a
+                  <a href="https://discord.gg/MGz2hKyyWR" class="btn btn-primary"
+                    >Join Our Discord</a
                   >
                 </div>
               </div>
@@ -107,7 +107,7 @@
                   </p>
                   <form class="listserv-form">
                     <a
-                      href="https://lists.virginia.edu/sympa/subscribe/atih_at_uva?previous_action=info"
+                      href="https://lists.virginia.edu/sympa/subscribe/sai_uva?previous_action=info"
                       target="_blank"
                       class="btn btn-accent"
                       >Subscribe</a
