--- a/pages/staff.html
+++ b/pages/staff.html
@@ -49,80 +49,13 @@
 
       <section class="staff-section">
         <div class="container">
+          <!-- Loading indicator -->
+          <div class="loading-indicator" style="text-align: center; padding: 2rem;">
+            <p>Loading staff members...</p>
+          </div>
+          <!-- Staff grid will be populated dynamically -->
           <div class="staff-grid">
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/fan.webp" alt="Xuxin Fan" />
-              </div>
-              <div class="staff-info">
-                <h3>Xuxin Fan</h3>
-                <h4>President, Policy Chair</h4>
-                <p class="major">Degree: Mathematics, Public Policy</p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
-
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/owen.webp" alt="Owen Watzlavick" />
-              </div>
-              <div class="staff-info">
-                <h3>Owen Watzlavick</h3>
-                <h4>Vice President, Policy Chair</h4>
-                <p class="major">Degree: Computer Science, Economics</p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
-
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/charles.webp" alt="Charles Melvin" />
-              </div>
-              <div class="staff-info">
-                <h3>Charles Melvin</h3>
-                <h4>Web Admin/Developer, Research Chair</h4>
-                <p class="major">
-                  Degree: Cognitive Science, Computer Science, Astronomy
-                </p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
-
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/arthur.webp" alt="Arthur Oker" />
-              </div>
-              <div class="staff-info">
-                <h3>Arthur Oker</h3>
-                <h4>Philosophy Chair, Treasurer</h4>
-                <p class="major">Degree: Philosophy, Computer Science</p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
-
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/lexie.webp" alt="Lexie" />
-              </div>
-              <div class="staff-info">
-                <h3>Lexie Chen</h3>
-                <h4>Webmaster</h4>
-                <p class="major">Degree: Computer Science, Data Science</p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
-
-            <div class="staff-card">
-              <div class="staff-photo">
-                <img src="../assets/team/justin.webp" alt="Justin" />
-              </div>
-              <div class="staff-info">
-                <h3>Tianyi Zhang (Justin)</h3>
-                <h4>Marketing/Social Chair</h4>
-                <p class="major">Degree: Undecided</p>
-                <p class="bio hidden">Bio coming soon.</p>
-              </div>
-            </div>
+            <!-- Staff cards will be inserted here by staffLoader.js -->
           </div>
         </div>
       </section>
@@ -135,5 +68,6 @@
 
     <script src="../components/addComponents.js"></script>
     <script src="../js/staffModal.js"></script>
+    <script src="../js/staffLoader.js"></script>
   </body>
 </html>
